// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/home/avale/node/jest-dot-http-files/tests/request-reference.http GET https://jsonplaceholder.typicode.com/todos/1?_=c193469d-2e75-43cf-a0ec-6414d6d001b5 1`] = `
{
  "request": {
    "headers": [
      [
        "content-type",
        Anything,
      ],
    ],
    "meta": {
      "ignoreHeaders": {
        "global": false,
        "value": ".*",
      },
      "name": {
        "global": false,
        "value": "sample1",
      },
    },
    "method": "GET",
    "url": "https://jsonplaceholder.typicode.com/todos/1?_=c193469d-2e75-43cf-a0ec-6414d6d001b5",
    "variables": {
      "dash": {
        "global": true,
        "value": "c193469d-2e75-43cf-a0ec-6414d6d001b5",
      },
      "host": {
        "global": true,
        "value": "https://jsonplaceholder.typicode.com",
      },
    },
  },
  "response": {
    "body": {
      "completed": false,
      "id": 1,
      "title": "delectus aut autem",
      "userId": 1,
    },
    "headers": [
      [
        "access-control-allow-credentials",
        Anything,
      ],
      [
        "alt-svc",
        Anything,
      ],
      [
        "cache-control",
        Anything,
      ],
      [
        "cf-cache-status",
        Anything,
      ],
      [
        "cf-ray",
        Anything,
      ],
      [
        "connection",
        Anything,
      ],
      [
        "content-encoding",
        Anything,
      ],
      [
        "content-type",
        Anything,
      ],
      [
        "date",
        Anything,
      ],
      [
        "etag",
        Anything,
      ],
      [
        "expires",
        Anything,
      ],
      [
        "nel",
        Anything,
      ],
      [
        "pragma",
        Anything,
      ],
      [
        "report-to",
        Anything,
      ],
      [
        "reporting-endpoints",
        Anything,
      ],
      [
        "server",
        Anything,
      ],
      [
        "transfer-encoding",
        Anything,
      ],
      [
        "vary",
        Anything,
      ],
      [
        "via",
        Anything,
      ],
      [
        "x-content-type-options",
        Anything,
      ],
      [
        "x-powered-by",
        Anything,
      ],
      [
        "x-ratelimit-limit",
        Anything,
      ],
      [
        "x-ratelimit-remaining",
        Anything,
      ],
      [
        "x-ratelimit-reset",
        Anything,
      ],
    ],
    "status": 200,
    "statusText": "OK",
  },
}
`;

exports[`/home/avale/node/jest-dot-http-files/tests/request-reference.http Replay the sample1 request 1`] = `
{
  "request": {
    "headers": [
      [
        "content-type",
        Anything,
      ],
    ],
    "meta": {
      "ignoreHeaders": {
        "global": false,
        "value": ".*",
      },
      "title": {
        "global": false,
        "value": "Replay the sample1 request",
      },
    },
    "method": "GET",
    "url": "https://jsonplaceholder.typicode.com/todos/1?_=e06a6194-024c-4956-b203-6f9afbee6b6f",
  },
  "response": {
    "body": {
      "completed": false,
      "id": 1,
      "title": "delectus aut autem",
      "userId": 1,
    },
    "headers": [
      [
        "access-control-allow-credentials",
        Anything,
      ],
      [
        "alt-svc",
        Anything,
      ],
      [
        "cache-control",
        Anything,
      ],
      [
        "cf-cache-status",
        Anything,
      ],
      [
        "cf-ray",
        Anything,
      ],
      [
        "connection",
        Anything,
      ],
      [
        "content-encoding",
        Anything,
      ],
      [
        "content-type",
        Anything,
      ],
      [
        "date",
        Anything,
      ],
      [
        "etag",
        Anything,
      ],
      [
        "expires",
        Anything,
      ],
      [
        "nel",
        Anything,
      ],
      [
        "pragma",
        Anything,
      ],
      [
        "report-to",
        Anything,
      ],
      [
        "reporting-endpoints",
        Anything,
      ],
      [
        "server",
        Anything,
      ],
      [
        "transfer-encoding",
        Anything,
      ],
      [
        "vary",
        Anything,
      ],
      [
        "via",
        Anything,
      ],
      [
        "x-content-type-options",
        Anything,
      ],
      [
        "x-powered-by",
        Anything,
      ],
      [
        "x-ratelimit-limit",
        Anything,
      ],
      [
        "x-ratelimit-remaining",
        Anything,
      ],
      [
        "x-ratelimit-reset",
        Anything,
      ],
    ],
    "status": 200,
    "statusText": "OK",
  },
}
`;
